--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,3 +12,6 @@ Pillow==10.1.0
 django-filter==23.3
 drf-spectacular==0.26.5
 gunicorn==21.2.0
+python-telegram-bot==20.7
+cryptography==41.0.7
+webdriver-manager==4.0.1
