🔧 Исправления Docker конфигурации
✅ Исправлено:
- Убран устаревший version из docker-compose.yml
- Создан nginx.conf для frontend контейнера
- Исправлен Dockerfile фронтенда
- Обновлен порт frontend с 3000 на 80

🐛 Решает проблемы:
- nginx.conf not found в frontend
- Предупреждения о version в docker-compose
- Правильная настройка портов для production

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   db:
     image: postgres:15
@@ -34,10 +32,9 @@ services:
   frontend:
     build: ./frontend
     ports:
-      - "3000:3000"
-    volumes:
-      - ./frontend:/app
-      - /app/node_modules
+      - "3000:80"
+    depends_on:
+      - backend
 
   nginx:
     image: nginx:alpine
