--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,11 +9,13 @@ services:
       - postgres_data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
+    restart: unless-stopped
 
   redis:
     image: redis:7-alpine
     ports:
       - "6379:6379"
+    restart: unless-stopped
 
   backend:
     build: ./backend
@@ -28,6 +30,7 @@ services:
       - redis
     volumes:
       - ./backend:/app
+    restart: unless-stopped
 
   frontend:
     build: ./frontend
@@ -35,6 +38,7 @@ services:
       - "3000:80"
     depends_on:
       - backend
+    restart: unless-stopped
 
   nginx:
     image: nginx:alpine
@@ -47,15 +51,7 @@ services:
     depends_on:
       - backend
       - frontend
-
-  parser:
-    build: ./parser
-    environment:
-      - DATABASE_URL=postgresql://cinema_user:cinema_pass@db:5432/telegram_cinema
-    depends_on:
-      - db
-    volumes:
-      - ./parser:/app
+    restart: unless-stopped
 
   telegram-bot:
     build: ./telegram-bot
@@ -66,6 +62,19 @@ services:
     restart: unless-stopped
     volumes:
       - ./telegram-bot:/app
+    depends_on:
+      - backend
+
+  # Parser - запускается вручную когда нужно
+  # docker-compose run parser
+  # parser:
+  #   build: ./parser
+  #   environment:
+  #     - DATABASE_URL=postgresql://cinema_user:cinema_pass@db:5432/telegram_cinema
+  #   depends_on:
+  #     - db
+  #   volumes:
+  #     - ./parser:/app
 
 volumes:
   postgres_data:
