--- a/parser/Dockerfile
+++ b/parser/Dockerfile
@@ -1,23 +1,20 @@
 FROM python:3.11-slim
 
-# Устанавливаем Chrome и зависимости для Selenium
+# Устанавливаем зависимости
 RUN apt-get update && apt-get install -y \
     wget \
     gnupg \
     unzip \
     curl \
-    && wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | apt-key add - \
-    && echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list \
+    ca-certificates \
+    && rm -rf /var/lib/apt/lists/*
+
+# Устанавливаем Chrome (новый способ без apt-key)
+RUN wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | gpg --dearmor -o /usr/share/keyrings/google-chrome.gpg \
+    && echo "deb [arch=amd64 signed-by=/usr/share/keyrings/google-chrome.gpg] http://dl.google.com/linux/chrome/deb/ stable main" > /etc/apt/sources.list.d/google-chrome.list \
     && apt-get update \
     && apt-get install -y google-chrome-stable \
     && rm -rf /var/lib/apt/lists/*
-
-# Устанавливаем ChromeDriver
-RUN CHROME_DRIVER_VERSION=`curl -sS chromedriver.storage.googleapis.com/LATEST_RELEASE` \
-    && wget -O /tmp/chromedriver.zip http://chromedriver.storage.googleapis.com/$CHROME_DRIVER_VERSION/chromedriver_linux64.zip \
-    && unzip /tmp/chromedriver.zip chromedriver -d /usr/local/bin/ \
-    && rm /tmp/chromedriver.zip \
-    && chmod +x /usr/local/bin/chromedriver
 
 WORKDIR /app
 
@@ -33,5 +30,5 @@ RUN useradd --create-home --shell /bin/bash parser
 RUN chown -R parser:parser /app
 USER parser
 
-# Запускаем парсер по расписанию
+# Запускаем парсер
 CMD ["python", "main.py"]
